<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    >
<LinearLayout
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">


        <!-- ML confidence threshold adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_face_detection_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/detection_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_face_tracking_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/tracking_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_face_presence_confidence_threshold"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/presence_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <!-- ML max num faces adjustment row -->

        <!-- Delegate selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_delegate"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                android:spinnerMode="dropdown"
                 />

        </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restore_defaults_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
        android:text="Restore Defaults" />



</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="#213E4B"
        android:text="@imnexerio" />
</RelativeLayout>
